--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -52,4 +52,8 @@
   height: 60vh;
   width: 100%;
   background-color: #61D685;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
