--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -49,11 +49,42 @@
 
 /* About */
 .home-about {
-  height: 60vh;
+  height: 70vh;
   width: 100%;
   background-color: #61D685;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.home-about-header {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5em;
+  color: #fff;
+}
+
+.home-about-header h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 2.5em;
+}
+
+.home-about-header h2 span {
+  background-color: #fff;
+  color: #61D685;
+  padding: 0.1em 0.3em;
+  border-radius: 0.3em;
+}
+
+.home-about-header button {
+  border: none;
+  outLine: none;
+  background: Transparent;
+  font-weight: 400;
+  font-size: 1em;
+  color: #fff;
 }
