--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -47,6 +47,13 @@
   100% { transform: translateY(0); }
 }
 
+.home h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 2.5em;
+  padding: 0.1em 0.3em;
+  border-radius: 0.3em;
+}
+
 /* About */
 .home-about {
   height: 85vh;
@@ -68,16 +75,9 @@
   color: #fff;
 }
 
-.home-about-header h2, .home-projects-header h2 {
-  font-family: "Roboto", sans-serif;
-  font-size: 2.5em;
-}
-
-.home-about-header h2 span {
+.home-about-header h2 {
   background-color: #fff;
   color: #61D685;
-  padding: 0.1em 0.3em;
-  border-radius: 0.3em;
 }
 
 .home-about-header button, .home-projects-header button {
@@ -108,9 +108,7 @@
   color: #61D685;
 }
 
-.home-projects-header h2 span {
+.home-projects-header h2{
   background-color: #61D685;
   color: #fff;
-  padding: 0.1em 0.3em;
-  border-radius: 0.3em;
 }
