--- a/src/CSS/homeProjectsList.css
+++ b/src/CSS/homeProjectsList.css
@@ -20,6 +20,36 @@
   box-shadow: 1px 1px 2px 2px #207a3c;
 }
 
+.home-projects-list-item-hover-off {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-projects-list-item-hover-on {
+  width: 100%;
+  height: 100%;
+  background-color: #61D685;
+  border-radius: 1em;
+  color: #fff;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+}
+
+.home-projects-list-item-hover-on h3 {
+  margin-top: 2em;
+  text-shadow: 1px 1px #000;
+  font-size: 2em;
+}
+
+.home-projects-list-item-hover-on h4 {
+  margin-top: 1em;
+  font-size: 1.5em;
+}
+
 .home-projects-list-item img {
   width: 50%;
   height: 70%;
@@ -30,4 +60,13 @@
 .home-projects-list-item h3 {
   font-family: "Roboto", sans-serif;
   font-weight: 550;
+}
+
+.home-projects-list-item .home-projects-list-item-hover-on,
+.home-projects-list-item:hover .home-projects-list-item-hover-off {
+  display: none;
+}
+
+.home-projects-list-item:hover .home-projects-list-item-hover-on {
+  display: inline;
 }
