--- a/src/CSS/homeProjectsList.css
+++ b/src/CSS/homeProjectsList.css
@@ -50,6 +50,20 @@
   font-size: 1.5em;
 }
 
+.home-projects-list-item-hover-on button {
+  border: none;
+  outLine: none;
+  background: #fff;
+  font-weight: 400;
+  font-size: 1em;
+  color: #61D685;
+  font-weight: 600;
+  width: 6em;
+  height: 3em;
+  border-radius: 0.5em;
+  box-shadow: 1px 1px 2px 2px #207a3c;
+}
+
 .home-projects-list-item img {
   width: 50%;
   height: 70%;
