--- a/src/CSS/about.css
+++ b/src/CSS/about.css
@@ -1,5 +1,5 @@
 .about {
-  width: 80%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,11 +23,24 @@
 }
 
 .about-desc-img {
-  border: 1px solid black;
-  width: 35%;
+  border: 3px solid #4dab6a;
+  width: 25%;
+  height: 30vh;
+  border-radius: 0.5em;
 }
 
 .about-desc-img img {
-  width: 100%;
+  width: 90%;
   height: auto;
+  margin-left: 5%;
+  margin-top: 0.5em; 
+}
+
+.about-paper-plane {
+  width: 100%;
+}
+
+.about-paper-plane img {
+  width: auto;
+  height: 20vh;
 }
