--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -25,8 +25,34 @@
 }
 
 .side-nav-bar {
-  width: 20%;
+  width: 25%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  border-right: 2px solid #70da91;
+}
+
+.side-nav-bar-link {
+  width: 75%;
+  padding: 0.8em 0.8em;
+  margin-bottom: 3em;
+  text-decoration: none;
+  color: #3b3a3a;
+  font-weight: 400;
+  border-radius: 0.8em;
+}
+
+.side-nav-bar-link:hover {
+  text-decoration: none;
+  background-color: #61D685;
+  color: #fff;
+}
+
+.side-nav-bar-active-link {
+  color: #57c077;
+}
+
+.side-nav-bar-link-name {
+  margin-left: 1em;
+  font-size: 1.3em;
 }
