--- a/src/CSS/footer.css
+++ b/src/CSS/footer.css
@@ -1,10 +1,10 @@
 .footer {
   width: 100%;
-  height: 50vh;
+  height: 35vh;
   background-color: #3d3d3d;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-family: "Roboto", sans-serif;
 }
@@ -26,6 +26,5 @@
 .copyright {
   color: #fff;
   font-size: 2em;
-  margin-top: 4em;
   letter-spacing: 0.2em;
 }
