--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -8,8 +8,6 @@
 
 .projects h2 {
   width: 15%;
-  font-family: "Roboto", sans-serif;
-  font-size: 2.5em;
   padding: 0.1em 0;
   text-align: center;
   background-color: #61D685;
@@ -19,9 +17,10 @@
 }
 
 .projects-body {
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .side-nav-bar {
