Modify side nav bar style

--- a/src/CSS/projectCarousel.css
+++ b/src/CSS/projectCarousel.css
@@ -3,7 +3,7 @@
   margin-left: 11%;
   margin-top: 1em;
   border-radius: 0.5em;
-  border: 1px solid #61D685;
+  border: 1px solid #565656;
 }
 
 .slides-show-desc {
