--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -73,7 +73,7 @@
 
 .side-nav-bar-active-link .side-nav-bar-marker-dot {
   background-color: #61D685;
-  box-shadow: 1px 1px 1px 1px #347347;
+  box-shadow: 1px 1px 1px 1px #224c2f;
 }
 
 .side-nav-bar-link-name {
