--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -1,6 +1,7 @@
 .projects {
   margin-top: 5em;
   width: 80%;
+  height: 135vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
