--- a/src/CSS/footer.css
+++ b/src/CSS/footer.css
@@ -1,16 +1,32 @@
 .footer {
   width: 100%;
-  height: 35vh;
+  height: 40vh;
   background-color: #3d3d3d;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   font-family: "Roboto", sans-serif;
 }
 
+.footer-title {
+  font-family: "Roboto", sans-serif;
+  font-size: 2em;
+  color: #fff;
+  margin-top: 2em;
+}
+
 .contact-list {
-  margin-top: 4em;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.contact-list a:hover {
+  text-decoration: none;
 }
 
 .list-item {
@@ -19,12 +35,11 @@
 
 .item-name {
   color: #fff;
-  font-size: 2em;
+  font-size: 1.5em;
   margin-left: 1em;
 }
 
 .copyright {
   color: #fff;
-  font-size: 2em;
   letter-spacing: 0.2em;
 }
