--- a/src/CSS/footer.css
+++ b/src/CSS/footer.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   font-family: "Roboto", sans-serif;
+  text-shadow: 2px 2px #000;
 }
 
 .footer-title {
