--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -102,3 +102,19 @@
   border-radius: 50%;
   background-color: #61D685;
 }
+
+.projects-list {
+  width: 75%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.projects-list-item {
+  width: 30%;
+}
+
+.projects-list-item img {
+  width: 100%;
+}
+
