--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,13 @@
   font-size: 2.5em;
 }
 
+.arrow-up {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+.arrow-up-hide {
+  display: none;
+}
+
