--- a/src/CSS/homeProjectsCarousel.css
+++ b/src/CSS/homeProjectsCarousel.css
@@ -57,7 +57,13 @@
   font-weight: 600;
   padding: 0.5em;
   border-bottom: 2px solid #61d685;
-  margin-bottom: 1.5em;
+  margin-bottom: 0.5em;
+}
+
+.carousel-item-media-i {
+  font-size: 1.5em;
+  margin: 0.5em 1em 0 1em;
+  color: #3a804f;
 }
 
 .home-projects-carousel-item-desc {
