--- a/src/CSS/about.css
+++ b/src/CSS/about.css
@@ -21,6 +21,13 @@
   width: 55%;
   padding: 2em;
   border-radius: 1em;
+  line-height: 1.5em;
+}
+
+.about-desc p::first-letter {
+  font-size: 2em;
+  font-weight: 600;
+  font-family: Times, "Times New Roman", serif;
 }
 
 .p-left {
