--- a/src/App.scss
+++ b/src/App.scss
@@ -5,11 +5,9 @@
 .App {
   @include flexStyle;
   border-top: $standardBorder;
-}
-
-.App h2 {
-  font-family: "Roboto", sans-serif;
-  font-size: 2.5em;
+  h2 {
+    @include fontStyle($sans-serif, $bigFont, null, null);
+  }
 }
 
 .arrow-up {
