--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Merienda+One&display=swap');
+
 .home {
   display: flex;
   flex-direction: column;
@@ -14,7 +16,7 @@
 }
 
 .intro {
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: 'Merienda One', cursive;
   font-size: 2em;
   font-weight: 500;
   color: #000;
