--- a/src/SCSS/helpers/_variables.scss
+++ b/src/SCSS/helpers/_variables.scss
@@ -13,6 +13,8 @@ $standardHeight: 100vh;
 // Font
 $sans-serif: "Roboto", sans-serif;
 $cursive: 'Merienda One', cursive;
+$serif: Times, "Times New Roman", serif;
+
 $light: 300;
 $normal: 400;
 $semibold: 500;
