--- a/src/SCSS/helpers/_variables.scss
+++ b/src/SCSS/helpers/_variables.scss
@@ -15,6 +15,7 @@ $standardHeight: 100vh;
 $sans-serif: "Roboto", sans-serif;
 $cursive: 'Merienda One', cursive;
 $serif: Times, "Times New Roman", serif;
+// $mono: "Courier New", Courier, monospace;
 
 $light: 300;
 $normal: 400;
