--- a/src/CSS/projectCarousel.css
+++ b/src/CSS/projectCarousel.css
@@ -1,9 +1,17 @@
+.slides-show-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .slides-show {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   height: 60vh;
+  width: 90%;
 }
 .slides-show-img {
   width: 80%;
@@ -13,7 +21,7 @@
 }
 
 .slides-show-desc {
-  width: 90%;
+  width: 100%;
   height: 15%;
   text-align: center;
   margin-top: 2%;
