--- a/src/SCSS/components/homeProjectsCarousel.scss
+++ b/src/SCSS/components/homeProjectsCarousel.scss
@@ -18,12 +18,17 @@
   color: #2ca952;
 }
 
-.home-projects-carousel-item {
-  width: $standardWidth;
-  height: $standardHeight * 0.8;
-  margin-left: auto;
-  margin-right: auto;
+.home-projects-carousel-item-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   background: #edfaf1;
+}
+
+.home-projects-carousel-item {
+  width: $standardWidth * 0.8;
+  height: $standardHeight * 0.8;
   @include flexStyle($justifyContent: space-around);
 }
 
@@ -77,18 +82,16 @@
 /*carousel left and right arrow part*/
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-  background-image: none;
+  opacity: 0;
 }
 
-.carousel-control-next-icon::after
-{
-  content: '>';
+.glyphicon {
   font-size: 3em;
   color: #2ca952;
+  opacity: 0.8;
 }
 
-.carousel-control-prev-icon::after {
-  content: '<';
-  font-size: 3em;
-  color: #2ca952;
-}
+
+
+
+
