--- a/src/SCSS/components/homeProjectsCarousel.scss
+++ b/src/SCSS/components/homeProjectsCarousel.scss
@@ -59,7 +59,7 @@
   font-size: $normalFont;
   font-weight: $bold;
   padding: 0.5em;
-  border-bottom: 2px solid #61d685;
+  border-bottom: 2px solid $themeColor;
   margin-bottom: 0.5em;
 }
 
