--- a/src/SCSS/components/projectCarousel.scss
+++ b/src/SCSS/components/projectCarousel.scss
@@ -14,8 +14,8 @@
 .slides-show-img {
   width: 80%;
   height: 80%;
-  margin-top: 1em;
-  border-radius: 0.5em;
+  margin-top: 1rem;
+  border-radius: 0.5rem;
 }
 
 .slides-show-desc {
