--- a/src/SCSS/components/about.scss
+++ b/src/SCSS/components/about.scss
@@ -5,7 +5,7 @@
 .about {
   width: $standardWidth * 0.7;
   @include flexStyle;
-  margin: 5em 0;
+  margin: 5rem 0;
   @include fontStyle($family: $sans-serif, $size: $normalFont, $weight: $normal);
 }
 
@@ -14,9 +14,9 @@
   p {
     @include borderStyle($borderStyle: dotted);
     width: $standardWidth * 0.55;
-    padding: 2em;
-    border-radius: 1em;
-    line-height: 1.5em;
+    padding: 2rem;
+    border-radius: 1rem;
+    line-height: 1.5rem;
     &::first-letter {
       @include fontStyle($serif, $mediumFont, $bold);
     }
@@ -35,7 +35,7 @@
   border: 3px solid #4dab6a;
   width: $standardWidth * 0.3;
   height: $standardHeight * 0.3;
-  border-radius: 0.5em;
+  border-radius: 0.5rem;
   @include boxShadow(2px, 2px, 2px, 2px, #132a1a);
 }
 
@@ -52,12 +52,12 @@
   height: 80%;
   margin-left: 5%;
   margin-top: 5%;
-  border-radius: 0.5em; 
+  border-radius: 0.5rem; 
 }
 
 .about-paper-plane {
   width: 100%;
-  margin: 3em 0 3em 30%;
+  margin: 3rem 0 3rem 30%;
 }
 
 .plane-right {
