--- a/src/SCSS/components/footer.scss
+++ b/src/SCSS/components/footer.scss
@@ -13,12 +13,12 @@
 
 .footer-title {
   @include fontStyle(null, $mediumFont, null, #fff); 
-  margin-top: 2em;
+  margin-top: 2rem;
 }
 
 .contact-list {
-  margin-top: 2em;
-  margin-bottom: 2em;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   @include flexStyle($alignItems: flex-start);
   a:hover {
     text-decoration: none;
@@ -26,15 +26,15 @@
 }
 
 .list-item {
-  margin-top: 1em;
+  margin-top: 1rem;
   .item-name {
     color: #fff;
     font-size: $normalFont;
-    margin-left: 1em;
+    margin-left: 1rem;
   }
 }
 
 .copyright {
   color: #fff;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.2rem;
 }
