--- a/src/SCSS/components/homeProjectsList.scss
+++ b/src/SCSS/components/homeProjectsList.scss
@@ -10,9 +10,9 @@
   width: 30%;
   height: 30vh;
   border: $standardBorder;
-  margin-right: 2em;
-  margin-bottom: 2em;
-  border-radius: 1em;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+  border-radius: 1rem;
   @include boxShadow(1px, 1px, 2px, 2px, #207a3c);
   @include flexStyle;
 }
@@ -27,7 +27,7 @@
   width: 100%;
   height: 100%;
   background-color: $themeColor;
-  border-radius: 1em;
+  border-radius: 1rem;
   color: #fff;
   text-align: center;
   font-family: $sans-serif;
@@ -50,10 +50,10 @@
   button {
     @extend %button;
     background: #fff;
-    @include fontStyle($family: $sans-serif, $size: 1.1em, $weight: $bold, $color: $themeColor);
-    width: 6em;
-    height: 3em;
-    border-radius: 0.5em;
+    @include fontStyle($family: $sans-serif, $size: 1.1rem, $weight: $bold, $color: $themeColor);
+    width: 6rem;
+    height: 3rem;
+    border-radius: 0.5rem;
     @include boxShadow(1px, 1px, 2px, 1px, #207a3c);
   }
 }
@@ -62,8 +62,8 @@
   img {
     width: 50%;
     height: 70%;
-    margin: 1em auto;
-    border-radius: 1em;
+    margin: 1rem auto;
+    border-radius: 1rem;
   }
 }
 
