--- a/src/SCSS/helpers/_variables.scss
+++ b/src/SCSS/helpers/_variables.scss
@@ -22,6 +22,8 @@ $normal: 400;
 $semibold: 500;
 $bold: 600;
 
-$normalFont: 1.5em;
-$mediumFont: 2em;
-$bigFont: 2.5em;
+$xSmallFont: 1.1rem;
+$smallFont: 1.25rem;
+$normalFont: 1.5rem;
+$mediumFont: 2rem;
+$bigFont: 2.5rem;
